--- a/covid/index.html
+++ b/covid/index.html
@@ -28,6 +28,7 @@
                             <li><a href="#">Prevention</a></li>
                         </ul>
                     </nav>
+                    <div class="menu__btn">menu</div>
                     <button class="btn-contact">Contact</button>
                 </div>
             </div>
